--- a/public/index.html
+++ b/public/index.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Edit meta tags for SEO -->
-    <title>DeveloperFolio | Developer Portfolio Template</title>
-    <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <title>Md Risfat Amin | Software Engineer (Flutter)</title>
+    <meta name="title" content="Md Risfat Amin | Software Engineer (Flutter)">
+    <meta name="description" content="I am a software engineer specializing in Flutter, with a passion for creating high-quality, user-centric applications. My portfolio showcases my skills, projects, and experiences, making me an ideal candidate for your next software development job.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://developerfolio.js.org/">
-    <meta property="og:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="og:url" content="https://risfat.vercel.app/">
+    <meta property="og:title" content="Md Risfat Amin | Software Engineer (Flutter)">
+    <meta property="og:description" content="I am a software engineer specializing in Flutter, with a passion for creating high-quality, user-centric applications. My portfolio showcases my skills, projects, and experiences, making me an ideal candidate for your next software development job.">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://developerfolio.js.org/">
-    <meta property="twitter:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="twitter:url" content="https://risfat.vercel.app/">
+    <meta property="twitter:title" content="Md Risfat Amin | Software Engineer (Flutter)">
+    <meta property="twitter:description" content="I am a software engineer specializing in Flutter, with a passion for creating high-quality, user-centric applications. My portfolio showcases my skills, projects, and experiences, making me an ideal candidate for your next software development job.">
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
 
@@ -43,15 +43,6 @@
     <link rel=preload href="/static/media/Montserrat-Regular.ee653992.ttf" as="font" type="font/woff" crossorigin>
     <link rel=preload href="/static/media/Agustina.21f233e1.woff" as="font" type="font/woff" crossorigin>
     
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135618960-2"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-135618960-2');
-    </script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css">
 
